--- a/apps/configurations/templates/element_type_list.html
+++ b/apps/configurations/templates/element_type_list.html
@@ -55,7 +55,7 @@
                         <td>{{ configurations.create_date}} </td>
                         <td>{{ configurations.status }}</td>
                         <td> 
-                          <a class="btn btn-primary" href="#">Edit</a>
+                          <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#Modal_element_update" data-pk="{{ configurations.id }}">Edit</a>
                           <a class="btn btn-danger" href="#" data-toggle="modal" data-target="#Modal_element_delete" data-pk="{{ configurations.id }}">Delete</a>              
                         </td>
                       </tr>
@@ -147,23 +147,58 @@
           <i class="material-icons"></i>
         </div>        
         <h4 class="modal-title">Are you sure? </h4>  
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>                
       </div>
       <div class="modal-body">
-        <p>Do you really want to delete these records? This process cannot be undone.</p>        
+        <p>Do you really want to delete these records? This process cannot be undone.</p>  
 			</div>
 			<div class="modal-footer">
-        <form action="{% url 'configurations:element_classification_delete' %}" method="POST">        
+        <form action="{% url 'configurations:delete_element_classification' %}" method="POST">
+          {% csrf_token %}        
           <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
-          <button type="submit" class="btn btn-danger">Delete</button>
+          <button type="submit" class="btn btn-danger" name="element_type_id" id="delete" value="">Delete </button>
         </form>
       </div>
       </div>      
     </div>
   </div>
 </div>
-
-
+{% comment %} Update Modal {% endcomment %}
+<div class="modal fade" id="Modal_element_update" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Update Element Class</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form action="element_classification" method="post">
+			{% csrf_token %}
+          <div class="form-group">
+					<label for="{{form2.code.id_for_label}}">{{form2.code.label}}</label>
+					{{form2.code}}
+			</div>
+          	<div class="form-group">
+					<label for="{{form2.name.id_for_label}}">{{form2.name.label}}</label>
+					{{form2.name}}
+			</div>
+			<div class="form-group">
+					<label for="{{form2.description.id_for_label}}">{{form2.description.label}}</label>
+					{{form2.description}}
+			</div>
+			<div class="form-group">
+					<label for="{{form2.element_type.id_for_label}}">{{form2.element_type.label}}</label>
+					{{form2.element_type}}
+			</div>
+			<button type="submit" class="btn btn-primary">Save</button>
+			<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </form>
+      </div>      
+    </div>
+  </div>
+</div>
 {% endblock%}
 
 
