--- a/apps/configurations/templates/element_type_list.html
+++ b/apps/configurations/templates/element_type_list.html
@@ -57,13 +57,13 @@
                         <div class="text-center"> 
                           <div class="checkbox">
                             <label>
-                              <input type="checkbox" data-toggle="toggle" data-on="Enabled" data-off="Disabled">
+                              <input type="checkbox" class="ClassificationStatus" data-changestatus="{% url 'configurations:update_status' pk=configurations.id %}" data-toggle="toggle" data-on="On" data-off="Off" {% if configurations.status is True %}checked{% endif %}>                              
                             </label>
                           </div>
                         </div>
                         </td>
                         <td> 
-                          <a class="btn btn-primary" href="{%url 'configurations:update_element_classification' configurations.id%}"  >Edit</a>
+                          <a class="btn btn-primary" href="{%url 'configurations:update_element_classification' configurations.id%}">Edit</a>
                           <a class="btn btn-danger" href="#" data-toggle="modal" data-target="#Modal_element_delete" data-pk="{{ configurations.id }}">Delete</a>              
                         </td>
                       </tr>
@@ -171,11 +171,5 @@
     </div>
   </div>
 </div>
-
 {% endblock%}
-
-
-
-
-
 
