--- a/apps/configurations/templates/element_form.html
+++ b/apps/configurations/templates/element_form.html
@@ -20,6 +20,7 @@
             {{form.element_type}}
         </div>
         <button type="submit" class="btn btn-primary">Save Changes</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button class="btn btn-secondary" href="{%url 'configurations:element_type_list' %}">Cancel</button>
     </form>
 {% endblock %}
+
