--- a/apps/configurations/templates/element_form.html
+++ b/apps/configurations/templates/element_form.html
@@ -3,24 +3,42 @@
 {% block content %}
     <form method="post">
         {% csrf_token %}
-        <div class="form-group">
-            <label for="{{form.code.id_for_label}}">{{form.code.label}}</label>
-            {{form.code}}
+    <div class="row">
+		<div class="col-md-6 col-md-offset-2 AdjustForm">
+            <div class="form-group">
+                <label for="{{form.code.id_for_label}}">{{form.code.label}}</label>
+                {{form.code}}
+            </div>
         </div>
-        <div class="form-group">
-            <label for="{{form.name.id_for_label}}">{{form.name.label}}</label>
-            {{form.name}}
+    </div>
+    <div class="row">
+		<div class="col-md-6 col-md-offset-2 AdjustForm">
+            <div class="form-group">
+                <label for="{{form.name.id_for_label}}">{{form.name.label}}</label>
+                {{form.name}}
+            </div>
         </div>
-        <div class="form-group">
-            <label for="{{form.description.id_for_label}}">{{form.description.label}}</label>
-            {{form.description}}
+    </div>
+    <div class="row">
+		<div class="col-md-6 col-md-offset-2 AdjustForm">
+            <div class="form-group">
+                <label for="{{form.description.id_for_label}}">{{form.description.label}}</label>
+                {{form.description}}
+            </div>
         </div>
-        <div class="form-group">
-            <label for="{{form.element_type.id_for_label}}">{{form.element_type.label}}</label>
-            {{form.element_type}}
+    </div>
+    <div class="row">
+		<div class="col-md-6 col-md-offset-2 AdjustForm">
+            <div class="form-group">
+                <label for="{{form.element_type.id_for_label}}">{{form.element_type.label}}</label>
+                {{form.element_type}}
+            </div>
         </div>
+    </div>
+    <div class="AdjustForm">
         <button type="submit" class="btn btn-primary">Save Changes</button>
-        <button class="btn btn-secondary" href="{%url 'configurations:element_type_list' %}">Cancel</button>
+        <button class="btn btn-secondary" href="{%url 'configurations:element_classification' %}">Cancel</button>
+    </div>
     </form>
 {% endblock %}
 
