--- a/apps/configurations/templates/type_edit.html
+++ b/apps/configurations/templates/type_edit.html
@@ -27,10 +27,17 @@
             </div>
         </div>
     </div>
+    <div class="row">
+		<div class="col-md-6 col-md-offset-2 AdjustForm">
+            <div class="form-group">
+                <label for="{{form.element_type.id_for_label}}">{{form.element_type.label}}</label>
+                {{form.element_type}}
+            </div>
+        </div>
+    </div>
     <div class="AdjustForm">
         <button type="submit" class="btn btn-primary">Save Changes</button>
-        <button class="btn btn-secondary" href="{%url 'configurations:update_type' %}">Cancel</button>
+        <button class="btn btn-secondary" href="{%url 'configurations:type_list' %}">Cancel</button>
     </div>
     </form>
 {% endblock %}
-
