--- a/apps/configurations/templates/type_edit.html
+++ b/apps/configurations/templates/type_edit.html
@@ -37,7 +37,7 @@
     </div>
     <div class="AdjustForm">
         <button type="submit" class="btn btn-primary">Save Changes</button>
-        <button class="btn btn-secondary" href="{%url 'configurations:type_list' %}">Cancel</button>
+        <button type="submit" class="btn btn-secondary" formnovalidate name="cancel">Cancel</button>
     </div>
     </form>
 {% endblock %}
