--- a/apps/configurations/templates/type_list.html
+++ b/apps/configurations/templates/type_list.html
@@ -1,7 +1,7 @@
 {% extends 'base1.html' %}
 {% block content %}
 <div class="topButtons ListPosition">
-  <a href="{% url 'configurations:type_list'%}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" style="margin:10px" data-toggle="modal" data-target="#Modal_element_type">Create Element Type</a>
+  <a href="{% url 'configurations:type_create'%}" class="btn btn-primary" style="margin:10px" >Create Element Type</a>
 </div>
 <div class="card shadow mb-4 ListPosition">
     <div class="card-header py-3">
