--- a/apps/configurations/static/css/my_style.css
+++ b/apps/configurations/static/css/my_style.css
@@ -33,3 +33,9 @@
     justify-content: center;
     width: 82%;
 }
+.SizetopButtons{
+    display:flex; 
+    flex-direction: row;
+    justify-content: space-between;
+    margin:10px
+}
