--- a/apps/configurations/templates/base1.html
+++ b/apps/configurations/templates/base1.html
@@ -73,6 +73,7 @@
             <a class="collapse-item" href="{% url 'configurations:type_list'%}">Element Type</a>
             <a class="collapse-item" href="{% url 'configurations:element_classification'%}">Element Classification</a>
             <a class="collapse-item" href="{% url 'body_config:body_part'%}">Body Part</a>
+            <a class="collapse-item" href="{% url 'size_config:size_list'%}">Sizes</a>
           </div>
         </div>
       </li>
