--- a/apps/configurations/static/css/my_style.css
+++ b/apps/configurations/static/css/my_style.css
@@ -39,3 +39,10 @@
     justify-content: space-between;
     margin:10px
 }
+.equipmentForm{
+    display: flex;
+    flex-direction: row;
+    /* border:10px blue solid; */
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
