--- a/apps/configurations/templates/index.html
+++ b/apps/configurations/templates/index.html
@@ -1,10 +1,16 @@
 {% extends 'base1.html' %}
 {% block content %}
-<div class="text-center"> 
-    <div class="checkbox">
-    <label>                  
-        <input type="checkbox" class="ClassificationStatus"  data-toggle="toggle" data-on="On" data-off="Off" data-onstyle="warning" {% if configurations.status is True %}checked{% endif %}>                   
-    </label>
-    </div>
-</div>
+<select class="form-control js-example-tags" multiple="multiple">
+  <option selected="selected">orange</option>
+  <option>white</option>
+  <option selected="selected">purple</option>
+</select>
+{% endblock %}
+
+{% block tag%}
+<script>
+$(".js-example-tags").select2({
+  tags: true
+});
+</script>
 {% endblock %}
