--- a/apps/configurations/templates/base1.html
+++ b/apps/configurations/templates/base1.html
@@ -35,7 +35,7 @@
 
   <!-- Page Wrapper -->
   <div id="wrapper">
-    {% block navbar %}  
+
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
@@ -62,7 +62,7 @@
 
       <!-- Heading -->
       <div class="sidebar-heading">
-        functionalities
+        Functionalities
       </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
@@ -78,7 +78,7 @@
             <a class="collapse-item" href="{% url 'configurations:element_classification'%}">Element Classification</a>
             <a class="collapse-item" href="{% url 'body_config:body_part'%}">Body Part</a>
             <a class="collapse-item" href="{% url 'size_config:size_list'%}">Sizes</a>
-             <a class="collapse-item" href="{% url 'equipment_config:equipment_list'%}">Equipment</a>
+            <a class="collapse-item" href="{% url 'equipment_config:equipment_list'%}">Equipment</a>
           </div>
         </div>
       </li>
@@ -152,8 +152,7 @@
 
     </ul>
     <!-- End of Sidebar -->
-    <!-- End of Content Wrapper -->
-    {% endblock %} 
+
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
 
@@ -342,27 +341,41 @@
 
         </nav>
         <!-- End of Topbar -->
-        <!-- Footer -->
-      <footer class="bg-white footerStyle" >
-        <div class="container my-auto ">
+
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+          {%block content%}
+          <!-- Page Heading -->
+          <div class="d-sm-flex align-items-center justify-content-between mb-4">
+            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+            <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+          </div>
+
+            </div>
+          </div>
+          
+        </div>
+        <!-- /.container-fluid -->
+
+      </div>
+      <!-- End of Main Content -->
+      {% endblock %}
+      <!-- Footer -->
+      <footer class="sticky-footer bg-white footerStyle">
+        <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span class="copyRight">Copyright © Your Website 2019</span>
+            <span>Copyright &copy; Your Website 2019</span>
           </div>
         </div>
-        <div class="my-auto logoiXerv">
+         <div class="my-auto logoiXerv">
           <img class="img-fluid px-3 px-sm-4 mt-3 mb-4 " src="/static/img/descarga.png" alt="">
         </div>
-      </footer>    
+      </footer>
       <!-- End of Footer -->
-        {% block content %}
-        <div class="well well-sm">
-         Esté es el contenido del archivo base.
-        </div>
-        {% comment %} Modal block {% endcomment %}
-        {% endblock %}
-      
+
     </div>
-     
+    <!-- End of Content Wrapper -->
+ 
   </div>
   <!-- End of Page Wrapper -->
   
