--- a/apps/warehouses/templates/warehouses_list.html
+++ b/apps/warehouses/templates/warehouses_list.html
@@ -43,7 +43,7 @@
                     <td>{{ configurations.phone_number}} </td>
                     <td> </td>
                     <td> 
-                    <a class="btn btn-warning" href="#">Add/Edit Responsibles</a>
+                    <a class="btn btn-warning" href="#" data-toggle="modal" data-target="#Modal_stockist" data-pk="#">Add/Edit Responsibles</a>
                     <a class="btn btn-primary" href="{%url 'body_config:body_update' configurations.id%}">Edit</a>
                     <a class="btn btn-danger" href="#" data-toggle="modal" data-target="#Modal_element_delete" data-pk="{{configurations.id}}">Delete</a>              
                     </td>
@@ -79,6 +79,38 @@
           <button type="submit" class="btn btn-danger" name="body_part_id" id="delete" value="">Delete </button>
         </form>
       </div>
+      </div>      
+    </div>
+  </div>
+</div>
+{% comment %} Stockists Modal {% endcomment %}
+<div class="modal fade" id="Modal_stockist" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" >Assign Stockists</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form method="post">
+          {% csrf_token %}			
+          <div class="form-group">
+              <label for="{{form.stockists.id_for_label}}">{{form.stockists.label}}</label>
+              {{form.stockists}}
+          </div>
+          <div class="form-group">
+              <label> Grant input                 
+                <input type="checkbox" data-toggle="toggle" data-on="On" data-off="Off" data-onstyle="warning">                   
+              </label>
+              <label> Grant output                 
+                <input type="checkbox" data-toggle="toggle" data-on="On" data-off="Off" data-onstyle="warning">                   
+              </label>
+          </div> 
+          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </form>
       </div>      
     </div>
   </div>
