--- a/apps/warehouses/templates/warehouses_list.html
+++ b/apps/warehouses/templates/warehouses_list.html
@@ -41,11 +41,14 @@
                     <td>{{ configurations.location }} </td>
                     <td>{{ configurations.addres }}</td>
                     <td>{{ configurations.phone_number}} </td>
-                    <td> </td>
+                    <td>
+                      {{ configurations.warehouse_count}}
+                      <a class="stockist_list" data-stockists="{% url 'warehouse_config:stockist_list' pk=configurations.id %}" data-toggle="modal" data-target="#Modal_list" href="#" ><i class="fas fa-users"></i></a>
+                    </td>
                     <td> 
-                    <a class="btn btn-warning" href="#" data-toggle="modal" data-target="#Modal_stockist" data-pk="#">Add/Edit Responsibles</a>
-                    <a class="btn btn-primary" href="{%url 'body_config:body_update' configurations.id%}">Edit</a>
-                    <a class="btn btn-danger" href="#" data-toggle="modal" data-target="#Modal_element_delete" data-pk="{{configurations.id}}">Delete</a>              
+                      <a class="btn btn-warning" href="#" data-toggle="modal" data-target="#Modal_stockist" data-pki="{{configurations.id}}">Add/Edit Responsibles</a>
+                      <a class="btn btn-primary" href="{%url 'body_config:body_update' configurations.id%}">Edit</a>
+                      <a class="btn btn-danger" href="#" data-toggle="modal" data-target="#Modal_element_delete" data-pk="{{configurations.id}}">Delete</a>              
                     </td>
                 </tr>
                 {% endfor %}                                  
@@ -94,25 +97,66 @@
         </button>
       </div>
       <div class="modal-body">
-        <form method="post">
+        <form action="{% url 'warehouse_config:stockists' %}" method="post">
           {% csrf_token %}			
           <div class="form-group">
-              <label for="{{form.stockists.id_for_label}}">{{form.stockists.label}}</label>
-              {{form.stockists}}
+            <select class = "form-control" name="stockists">
+                <option value="" selected="selected">-------------</option> 
+              {% for configuration in stockists %}
+                <option value="{{ configuration.id }}">{{ configuration.name }} - {{ configuration.position }}</option> 
+              {% endfor %} 
+            </select>
           </div>
           <div class="form-group">
               <label> Grant input                 
-                <input type="checkbox" data-toggle="toggle" data-on="On" data-off="Off" data-onstyle="warning">                   
+                <input type="checkbox" name="ginput" data-toggle="toggle" data-on="On" data-off="Off" data-onstyle="warning">                   
               </label>
               <label> Grant output                 
-                <input type="checkbox" data-toggle="toggle" data-on="On" data-off="Off" data-onstyle="warning">                   
+                <input type="checkbox" name="goutput" data-toggle="toggle" data-on="On" data-off="Off" data-onstyle="warning">                   
               </label>
           </div> 
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="submit" class="btn btn-primary" id="stock" name="warehouse" value="">Save</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </form>
       </div>      
     </div>
   </div>
 </div>
+{% comment %} Stockists List Modal {% endcomment %}
+<div class="modal fade" id="Modal_list" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" >Assign Stockists</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        
+      </div>      
+    </div>
+  </div>
+</div>
 {% endblock%}
+{% block extra_jquery %}
+  {% autoescape on %}
+        <script>
+            var token = '{{csrf_token}}';
+            $('#stockist_list').on('show.bs.modal', function (event) {
+            var urlToAjax = $(this).data('stockists');
+            console.log(urlToAjax);
+                $.ajax({
+                    headers: { "X-CSRFToken": token },
+                    url: urlToAjax,
+                    type: 'POST',
+                    data: "status="+$(this).prop("checked"),
+                    dataType: 'json',
+                    success: function (data) {
+                        console.info(data);*/
+                    }
+                });
+            });
+        </script>
+    {% endautoescape %}
+  {% endblock %}
